ensure no unnecessary scrollbar pops up

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,13 +1,8 @@
 :root {
   font-family: "Courier", "Courier New", monospace;
+  overflow-y: auto;
 }
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-@layer base {
-  body {
-    @apply p-2;
-  }
-}
